Fix page overflow

--- a/src/styles/Playlist.module.css
+++ b/src/styles/Playlist.module.css
@@ -1,3 +1,4 @@
 .Playlist {
-  width: 100%;
+  /* width: 50%; */
+  width: 100vw;
 }
