--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,5 +1,5 @@
 .Search {
-  width: 100%;
+  width: 100vw;
 }
 
 .SearchResults {
